feat(multi): integrate multichain bens endpoints (#1600)
* feat: add address domains lookup endpoint

* feat: migrate other bens endpoints to multichain format

* feat: dynamically fetch cluster protocols

* feat: explicitly limit the number of queried protocols

* feat: add priority protocols setting
